--- a/copy sub page/style.css
+++ b/copy sub page/style.css
@@ -5,6 +5,15 @@
 /* Antic */
 @import url('https://fonts.googleapis.com/css2?family=Antic&display=swap');
 
+
+body {
+    background-color: #000000;
+    font-family: serif;
+}
+
+body *::selection {
+    background-color: #4b2c2c;
+}
 .mynavbar{
     /* background-color: rgba(0, 0, 0, 0.8); */
     background: linear-gradient(black,rgba(0, 0, 0, 0));
@@ -173,12 +182,13 @@ height: 400px;
 .div-parent {
     width: 260px;
     height: 380px;
-    background-color: rgb(187, 187, 187);
+    background: linear-gradient(120deg,rgb(77, 1, 177) ,rgba(37, 25, 199, 0.37), rgb(70, 12, 117));
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     /* justify-content: center; */
+    border-radius: 15px;
 }
 
 .child1 {
@@ -187,6 +197,10 @@ height: 400px;
     width: 230px;
     height: 240px;
     background-color: aqua;
+    border-radius: 17px;
+}
+.child1 img {
+    border-radius: 15px;
 }
 
 .child2 {
@@ -195,8 +209,16 @@ height: 400px;
     flex-direction: column;
     width: 230px;
     height: 110px;
-    background-color: rgb(187, 187, 187);
+    background-color: rgba(255, 255, 255, 0);
     line-height: 0.5mm;
+}
+
+.child2 p {
+    color: white;
+}
+
+.child2 h3 {
+    color: #FF6500;
 }
 
 .para-box {
@@ -227,20 +249,27 @@ height: 400px;
 }
 
 
-
 .icone a {
     border: 1px rgb(182, 182, 182) solid;
     padding: 10px 14px;
     margin-right: 3px;
     transition: 0.3s;
-    background-color: rgb(17, 17, 48);
+    background-color: rgb(0, 0, 0);
     border-radius: 12px;
     color: beige;
 }
 
+.icone svg{
+color: white;
+transition: 0.2s;
+}
+.icone svg:hover{
+    color: #FF6500;
+}
+
 .icone a:hover {
-   color: rgb(233, 177, 23);
-   border: 1px solid white;
+   color: #FF6500;
+   border: 1px solid #FF6500;
 }
 
 .parent-links a{
@@ -256,5 +285,42 @@ height: 400px;
 }
 
 .parent-input input{
-border: 1px solid gray;
+border: 1px solid #ffffff;
+background-color: #000000;
+}
+
+.parent-input input:hover {
+    border: 1px solid #FF6500;
+}
+
+footer {
+    background: linear-gradient(120deg,rgba(27, 18, 107, 0.37), rgba(16, 1, 29, 0));
+}
+
+/* .footer2 {
+border: 1px solid white;
+} */
+
+.orang {
+    color: #FF6500;
+}
+
+.parent-links svg {
+    color: rgb(255, 255, 255) !important;
+}
+
+/* .icone-tel svg {
+    color: white;
+} */
+
+.button-input {
+    background-color: #ff6500;
+    color: #000000;
+    border: 1px solid black;
+}
+
+.button-input:hover {
+color: #FF6500;
+background-color: #000000;
+/* border: white; */
 }
